<resources>
    <string name="app_name">Atomic Chemistry</string>

    <string name="books">Books</string>
    <string name="solutions">Solutions</string>
    <string name="notes">Notes</string>
    <string name="imp_questions">Imp. Questions</string>
    <string name="sample_papers">Sample Papers</string>

    <string name="select_standard">Select Standard</string>
    <string name="select_standard_and_board">Select Standard and Board</string>
    <string name="ninth_standard">9th Standard</string>
    <string name="tenth_standard">10th Standard</string>
    <string name="eleventh_standard">11th Standard</string>
    <string name="twelfth_standard">12th Standard</string>

    <string name="hide_topics">Hide Topics</string>
    <string name="view_topics">View Topics</string>
    <string name="view_book">View Book</string>
    <string name="view_solution">View Solution</string>
    <string name="view_notes">View Notes</string>
    <string name="view_questions">View Questions</string>
    <string name="view_sample_papers">View Sample Papers</string>
    <string name="view_subtopics">View Sub-Topics</string>
    <string name="hide_subtopics">Hide Sub-Topics</string>

    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="open">Open</string>
    <string name="opening">Opening</string>
    <string name="unavailable">Unavailable</string>
    <string name="source_link_not_available">Source Link not available</string>
    <string name="file_already_in_downloads">File already in downloads</string>

    <string name="chapter">Chapter</string>
    <string name="sample_paper">Sample Paper</string>

    <string name="download_chapter">Download Chapter</string>
    <string name="chapter_downloading">Downloading Chapter</string>
    <string name="open_chapter">Open Chapter</string>
    <string name="opening_chapter">Opening Chapter</string>
    <string name="chapter_unavailable">Chapter Unavailable</string>

    <string name="download_solution">Download Solution</string>
    <string name="solution_downloading">Downloading Solution</string>
    <string name="open_solution">Open Solution</string>
    <string name="opening_solution">Opening Solution</string>
    <string name="solution_unavailable">Solution Unavailable</string>

    <string name="download_notes">Download Notes</string>
    <string name="notes_downloading">Downloading Notes</string>
    <string name="open_notes">Open Notes</string>
    <string name="opening_notes">Opening Notes</string>
    <string name="notes_unavailable">Notes Unavailable</string>

    <string name="download_questions">Download Questions</string>
    <string name="questions_downloading">Downloading Questions</string>
    <string name="open_questions">Open Questions</string>
    <string name="opening_questions">Opening Questions</string>
    <string name="questions_unavailable">Questions Unavailable</string>

    <string name="download_sample_papers">Download Sample papers</string>
    <string name="sample_papers_downloading">Downloading Sample papers</string>
    <string name="open_sample_papers">Open Sample papers</string>
    <string name="opening_sample_papers">Opening Sample papers</string>
    <string name="sample_papers_unavailable">Sample papers Unavailable</string>

    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string-array name="languages">
        <item>English</item>
        <item>हिन्दी</item>
    </string-array>
    <string name="language_english">English</string>
    <string name="language_hindi">हिन्दी</string>

    <string name="loading_data">Loading</string>
    <string name="wait_while_fetching_the_data">Wait while fetching the data</string>
    <string name="no_internet_connection_found">No Internet Connection Found</string>
    <string name="unable_to_fetch_data_from_server">Unable to fetch data from server</string>
    <string name="unable_to_fetch_data">Unable to fetch data</string>

    <string name="chapter_1">Chapter 1</string>
    <string name="chapter_2">Chapter 2</string>
    <string name="chapter_3">Chapter 3</string>
    <string name="chapter_4">Chapter 4</string>
    <string name="chapter_5">Chapter 5</string>
    <string name="chapter_6">Chapter 6</string>
    <string name="chapter_7">Chapter 7</string>
    <string name="chapter_8">Chapter 8</string>
    <string name="chapter_9">Chapter 9</string>
    <string name="chapter_10">Chapter 10</string>
    <string name="chapter_11">Chapter 11</string>


    <string-array name="ninth_topics">
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
    </string-array>
    <string-array name="ninth_dummy_chapter_sub_topics">
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
    </string-array>

    <string-array name="tenth_topics">
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
    </string-array>
    <string-array name="tenth_dummy_chapter_sub_topics">
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
    </string-array>

    <string-array name="eleventh_topics">
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
        <item>Dummy Chapter</item>
    </string-array>
    <string-array name="eleventh_dummy_chapter_sub_topics">
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
    </string-array>

    <string-array name="twelfth_topics">
        <item>The Solid State</item>
        <item>Solutions</item>
        <item>Electrochemistry</item>
        <item>Chemical Kinetics</item>
        <item>Surface Chemistry</item>
        <item>General Principles and Processes of Isolation of Elements</item>
        <item>The p-Block Elements</item>
        <item>The d-and f-Block Elements</item>
        <item>Coordination Compounds</item>
    </string-array>
    <string-array name="twelfth_the_solid_state_sub_topics">
        <item>General Characteristics of Solid State</item>
        <item>Amorphous and Crystalline Solids</item>
        <item>Classification of Crystalline Solids</item>
        <item>Crystal Lattices and Unit Cells</item>
    </string-array>
    <string-array name="twelfth_solutions_sub_topics">
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
    </string-array>
    <string-array name="twelfth_electrochemistry_sub_topics">
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
    </string-array>
    <string-array name="twelfth_chemical_kinetics_sub_topics">
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
    </string-array>
    <string-array name="twelfth_surface_chemistry_sub_topics">
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
    </string-array>
    <string-array name="twelfth_general_principles_and_processes_of_isolation_of_elements_sub_topics">
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
    </string-array>
    <string-array name="twelfth_the_p_block_elements_sub_topics">
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
    </string-array>
    <string-array name="twelfth_the_d_and_f_block_elements_sub_topics">
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
    </string-array>
    <string-array name="twelfth_coordination_compounds_sub_topics">
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
        <item>Dummy Sub-topic</item>
    </string-array>


</resources>
