<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.atomicchemistry.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/books_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/home_category_button_style"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="4dp"
                    android:paddingBottom="8dp"
                    android:text="@string/books"
                    android:fontFamily="sans-serif"
                    android:drawableTop="@drawable/icon_book"
                    android:onClick="onButtonClicked"/>

                <Button
                    android:id="@+id/solutions_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/home_category_button_style"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/solutions"
                    android:fontFamily="sans-serif"
                    android:drawableTop="@drawable/icon_bulb"
                    android:onClick="onButtonClicked"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/notes_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/home_category_button_style"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="4dp"
                    android:paddingBottom="8dp"
                    android:text="@string/notes"
                    android:fontFamily="sans-serif"
                    android:drawableTop="@drawable/icon_pdhte_hue"
                    android:onClick="onButtonClicked"/>

                <Button
                    android:id="@+id/imp_ques_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/home_category_button_style"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/imp_questions"
                    android:fontFamily="sans-serif"
                    android:drawableTop="@drawable/icon_star"
                    android:onClick="onButtonClicked"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sample_papers_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/home_category_button_style"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="4dp"
                    android:paddingBottom="8dp"
                    android:text="@string/sample_papers"
                    android:fontFamily="sans-serif"
                    android:drawableTop="@drawable/icon_pdhte_hue"
                    android:onClick="onButtonClicked"/>

                <Button
                    android:id="@+id/category1_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/home_category_button_style"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:paddingBottom="8dp"
                    android:text="no category"
                    android:fontFamily="sans-serif"
                    android:drawableTop="@drawable/icon_star"
                    android:onClick="onButtonClicked"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>